updated css with hubspot css

--- a/index.html
+++ b/index.html
@@ -69,8 +69,6 @@
     <!-- ============== bg-gray ================== -->
     <section class="section-padding gray-bg circles-img" style="background-image: url('images/white-radial.png');">
         <img src="images/white-circle.png" alt="white-circle" class="mbm-img">
-        <img src="" alt="">
-        <div class="container-fluid">
             <div class="text-center">
                 <h2 class="blue-text">GDPR Revolutionizes<br> Data Repurposing & Sharing</h2>
                 <div class="hr-green mx-auto"></div>
@@ -92,8 +90,7 @@
     </section>
     <!-- ============== /bg-gray ================== -->
     <!-- =============== code bg section =============== -->
-    <section class="code-bg section-padding">
-        <img src="images/code-bg.png" alt="code-bg" class="mbm-img">
+    <section class="code-bg section-padding"style="background-image: url('images/code-bg.png');">
         <div class="container">
             <div class="content">
                 <h2 class="white-text">Do you know the latest GDPR rules for Lawful use of Analytics & Big Data?</h2>
@@ -139,11 +136,12 @@
                         <h2>Why Choose?</h2>
                         <div class="hr-green"></div>
                         <h3>With other privacy technologies, <br>you’re force to choose between:</h3>
-                        <ul class="green-dots-list">
+                        <div>
+                            <ul class="green-dots-list">
                             <li>Protecting data only for siloed use, or</li>
                             <li>Enabled distributed use without adequate  protections</li>
                         </ul>
-                        <p>And you’re only protecting data <br>in-transit or at-rest but not in-use.</p>
+                        <p>And you’re only protecting data <br>in-transit or at-rest but not in-use.</p></div>
                         </div>
                     </div>
             </div>
@@ -223,12 +221,11 @@
     </section>
     <!-- ============== /bg-gray ================== -->
     <!-- ======== contact section ============ -->
-    <section class="section-padding blue-bg contact-section">
-        <img src="images/Globe.png" alt="Globe" class="mbm-img mbm-overlay">
+    <section class="section-padding blue-bg contact-section" style="background-image: url('images/Globe.png');">
             <div class="container">
                 <div class="text-center">
                     <h2 class="h1 white-text">Contact us to learn more</h2>
-                    <a href="#" class="btn big-btn">Contact Us</a>
+                    <a href="https://www.anonos.com/contact-us" class="btn big-btn">Contact Us</a>
                 </div>
             </div>
     </section>
@@ -257,13 +254,15 @@
         </div>
         <div class="footer-bottom-content">
             <div class="social-icons">
-                <a href="#"><i class="im im-linkedin"></i></a>
-                <a href="#"><i class="im im-twitter"></i></a>
+                <a href="https://www.linkedin.com/company/5278249/"><i class="im im-linkedin"></i></a>
+                <a href="https://twitter.com/anonos"><i class="im im-twitter"></i></a>
             </div>
-            <ul class="copyright unstyled">
-                <li>&copy; 2012-2019 Anonos</li>
-                <li>All Rights Reserved</li>
-            </ul>
+            <div class="copyright">
+                <ul class="unstyled">
+                    <li>&copy; 2012-2019 Anonos</li>
+                    <li>All Rights Reserved</li>
+                </ul>
+            </div>
         </div>
     </div>
 </footer>
